--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,3 +44,37 @@ a {
 .gm-style-cc {
   display: none !important;
 }
+
+.pac-container {
+  width: calc(100vw - 34px) !important;
+  left: 10px !important;
+  top: 84px !important;
+
+  display: flex;
+  flex-direction: column;
+
+  border: none;
+  border-radius: 24px;
+  padding: 0px 20px;
+  background-color: #383838;
+
+  gap: 10px;
+
+  padding-top: 18px;
+
+  > .pac-item {
+    border: none !important;
+    padding: 10px 10px;
+
+    border-radius: 24px;
+    color: wheat;
+    font-size: 15px;
+    .pac-item-query {
+      color: white;
+      font-size: 17px;
+    } 
+    &:hover {
+      background-color: #282828;
+    }
+  }
+}
