--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -24,3 +24,37 @@
     background-color: #383838;
     color: white !important;
 }
+
+.findClosest {
+    width: 64px;
+    height: 64px;
+
+    position: absolute;
+    bottom: 50px;
+    right: calc(50% - 32px);
+
+    z-index: 1;
+
+    border: none;
+    border-radius: 100%;
+    background-color: #383838;
+    margin: 0px;
+    padding: 0px;
+}
+
+.rtnBtn {
+    width: 48px;
+    height: 48px;
+
+    position: absolute;
+    bottom: 50px;
+    right: 0px;
+
+    z-index: 1;
+
+    border: none;
+    border-radius: 100%;
+    background-color: #383838;
+    margin: 0px;
+    padding: 0px;
+}
